# binance_grid_trader

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  changelog_template.md  config.example.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
gridtrader/: grid_strategy_data.json  grid_strategy_setting.json
gridtrader/gateway/binance/: binance_gateway.py
gridtrader/trader/: engine.py
gridtrader/trader/strategies/: future_grid_long_short_strategy.py  future_grid_strategy.py  spot_grid_strategy.py  template.py
gridtrader/trader/ui/: widget.py
